plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
}

group = 'org.cheonyakPlanet'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

jacoco {
    toolVersion = "0.8.11"
}

configurations {
    all {
        // Android JSON 라이브러리 제외
        exclude group: 'com.vaadin.external.google', module: 'android-json'
    }
}

repositories {
    mavenCentral()
}

processResources {
    from('scripts') {
        into 'scripts'
    }
}

dependencies {
    // Spring Boot starters
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web-services'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // web client
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation group: 'org.json', name: 'json', version: '20210307'

    // Thymeleaf extras
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

    // Logging (Logback)
    implementation 'ch.qos.logback:logback-classic'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // OpenAPI (Swagger)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'

    // MySQL
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // monitoring
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // JavaMailSender
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    implementation 'org.springframework.retry:spring-retry'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    
    // dotenv support
    implementation 'me.paulschwarz:spring-dotenv:4.0.0'

}

tasks.named('test') {
    useJUnitPlatform()
}

test {
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
        csv.required = true
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                // Exclude configuration classes
                '**/config/**',
                '**/BeApplication.class',
                // Exclude DTOs (data transfer objects)
                '**/dto/**',
                // Exclude exception classes
                '**/exception/**',
                // Exclude entity classes (data classes)
                '**/entity/**',
                // Exclude constants and enums
                '**/UserRoleEnum.class',
                '**/UserStatusEnum.class',
                '**/PostCategory.class',
                '**/ReactionType.class',
                '**/ErrorCode.class',
                // Exclude generated code and builders
                '**/*Builder.class',
                '**/*$*.class'
            ])
        }))
    }
    executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")
}

jacocoTestCoverageVerification {
    dependsOn jacocoTestReport
    violationRules {
        rule {
            limit {
                minimum = 0.70 // 70% minimum coverage
            }
        }
        rule {
            element = 'CLASS'
            excludes = [
                '*.config.*',
                '*.dto.*',
                '*.entity.*',
                '*.exception.*',
                '*.*Application',
                '*.UserRoleEnum',
                '*.UserStatusEnum',
                '*.PostCategory',
                '*.ReactionType',
                '*.ErrorCode'
            ]
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.80 // 80% for service classes
            }
        }
        rule {
            element = 'METHOD'
            excludes = [
                '*.config.*',
                '*.dto.*',
                '*.entity.*',
                '*.exception.*'
            ]
            limit {
                counter = 'BRANCH'
                value = 'COVEREDRATIO'
                minimum = 0.75 // 75% branch coverage
            }
        }
    }
}

check.dependsOn jacocoTestCoverageVerification